--- a/src/Untitled3.ipynb
+++ b/src/Untitled3.ipynb
@@ -4800,7 +4800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 26,
    "id": "2c038a0c",
    "metadata": {},
    "outputs": [],
@@ -4810,7 +4810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "id": "aadfee4c",
    "metadata": {},
    "outputs": [],
@@ -4820,7 +4820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
    "id": "f873f0f5",
    "metadata": {},
    "outputs": [
@@ -4894,7 +4894,7 @@
        "33208               135              49    1039"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4905,7 +4905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 29,
    "id": "694c6465",
    "metadata": {},
    "outputs": [
@@ -8142,7 +8142,7 @@
        "265  40.438370                                        Zurbano, 90           24  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8153,7 +8153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "id": "b644b22e",
    "metadata": {},
    "outputs": [],
@@ -8163,7 +8163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "id": "6b41ef5f",
    "metadata": {},
    "outputs": [],
@@ -8174,7 +8174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 32,
    "id": "b4f1d6af",
    "metadata": {},
    "outputs": [],
@@ -8184,7 +8184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "id": "55bb2bfa",
    "metadata": {},
    "outputs": [],
@@ -8194,7 +8194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 34,
    "id": "b11de8b4",
    "metadata": {},
    "outputs": [],
@@ -8204,7 +8204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 35,
    "id": "dbaad819",
    "metadata": {},
    "outputs": [],
@@ -8214,7 +8214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 36,
    "id": "691ab816",
    "metadata": {},
    "outputs": [
@@ -8350,7 +8350,7 @@
        "4      4  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8361,7 +8361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 37,
    "id": "6824b79f",
    "metadata": {},
    "outputs": [
@@ -8373,7 +8373,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8384,24 +8384,446 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "be1776ce",
+   "execution_count": 68,
+   "id": "8cb513cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3696359"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "flows1[['idunplug_station', 'idplug_station', 'n_recs', 'name_sal',\n",
-    "       'sal_lon', 'sal_lat', 'name_en', 'en_lon', 'en_lat', 'track']]"
+    "flows1.n_recs.sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 59,
+   "id": "be1776ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>est</th>\n",
+       "      <th>n_recs</th>\n",
+       "      <th>name</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>track</th>\n",
+       "      <th>pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>149</td>\n",
+       "      <td>1391</td>\n",
+       "      <td>Glorieta de los Cuatro Caminos</td>\n",
+       "      <td>-3.703667</td>\n",
+       "      <td>40.446367</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>43</td>\n",
+       "      <td>1274</td>\n",
+       "      <td>Plaza de la Cebada</td>\n",
+       "      <td>-3.708834</td>\n",
+       "      <td>40.411274</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>220</td>\n",
+       "      <td>1204</td>\n",
+       "      <td>Marqués de Vadillo</td>\n",
+       "      <td>-3.716591</td>\n",
+       "      <td>40.398247</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>43</td>\n",
+       "      <td>1106</td>\n",
+       "      <td>Plaza de la Cebada</td>\n",
+       "      <td>-3.708834</td>\n",
+       "      <td>40.411274</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49</td>\n",
+       "      <td>1039</td>\n",
+       "      <td>Puerta de Toledo</td>\n",
+       "      <td>-3.711051</td>\n",
+       "      <td>40.407036</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   est  n_recs                            name  longitude   latitude  track  \\\n",
+       "0  149    1391  Glorieta de los Cuatro Caminos  -3.703667  40.446367      0   \n",
+       "1   43    1274              Plaza de la Cebada  -3.708834  40.411274      1   \n",
+       "2  220    1204              Marqués de Vadillo  -3.716591  40.398247      2   \n",
+       "3   43    1106              Plaza de la Cebada  -3.708834  40.411274      3   \n",
+       "4   49    1039                Puerta de Toledo  -3.711051  40.407036      4   \n",
+       "\n",
+       "   pos  \n",
+       "0    2  \n",
+       "1    2  \n",
+       "2    2  \n",
+       "3    2  \n",
+       "4    2  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flows1a = flows1[['idunplug_station', 'n_recs', 'name_sal',\n",
+    "       'sal_lon', 'sal_lat','track']].rename(columns={'name_sal': 'name','idunplug_station':'est', 'sal_lon': 'longitude', 'sal_lat':'latitude'})\n",
+    "\n",
+    "flows1a['pos'] = 1\n",
+    "\n",
+    "\n",
+    "flows1b = flows1[['idplug_station', 'n_recs', 'name_en', 'en_lon', 'en_lat', 'track']]\\\n",
+    "        .rename(columns={'name_en': 'name','idplug_station':'est', 'en_lon': 'longitude', 'en_lat':'latitude'})\n",
+    "\n",
+    "flows1b['pos'] = 2\n",
+    "\n",
+    "\n",
+    "flows1b.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "d16b3983",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flows2 = pd.concat([flows1a, flows1b])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "a2f2d9a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flows2  = flows2.sort_values(by=['track', 'pos'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "4a98b215",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>est</th>\n",
+       "      <th>n_recs</th>\n",
+       "      <th>name</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>track</th>\n",
+       "      <th>pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9</td>\n",
+       "      <td>1391</td>\n",
+       "      <td>Alonso Martínez</td>\n",
+       "      <td>-3.695440</td>\n",
+       "      <td>40.427868</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>149</td>\n",
+       "      <td>1391</td>\n",
+       "      <td>Glorieta de los Cuatro Caminos</td>\n",
+       "      <td>-3.703667</td>\n",
+       "      <td>40.446367</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>175</td>\n",
+       "      <td>1274</td>\n",
+       "      <td>Segovia 45</td>\n",
+       "      <td>-3.717487</td>\n",
+       "      <td>40.413736</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>43</td>\n",
+       "      <td>1274</td>\n",
+       "      <td>Plaza de la Cebada</td>\n",
+       "      <td>-3.708834</td>\n",
+       "      <td>40.411274</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>43</td>\n",
+       "      <td>1204</td>\n",
+       "      <td>Plaza de la Cebada</td>\n",
+       "      <td>-3.708834</td>\n",
+       "      <td>40.411274</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>220</td>\n",
+       "      <td>1204</td>\n",
+       "      <td>Marqués de Vadillo</td>\n",
+       "      <td>-3.716591</td>\n",
+       "      <td>40.398247</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>220</td>\n",
+       "      <td>1106</td>\n",
+       "      <td>Marqués de Vadillo</td>\n",
+       "      <td>-3.716591</td>\n",
+       "      <td>40.398247</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>43</td>\n",
+       "      <td>1106</td>\n",
+       "      <td>Plaza de la Cebada</td>\n",
+       "      <td>-3.708834</td>\n",
+       "      <td>40.411274</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>135</td>\n",
+       "      <td>1039</td>\n",
+       "      <td>Entrada Matadero</td>\n",
+       "      <td>-3.697571</td>\n",
+       "      <td>40.392882</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49</td>\n",
+       "      <td>1039</td>\n",
+       "      <td>Puerta de Toledo</td>\n",
+       "      <td>-3.711051</td>\n",
+       "      <td>40.407036</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>42</td>\n",
+       "      <td>1018</td>\n",
+       "      <td>Plaza de los Carros</td>\n",
+       "      <td>-3.712073</td>\n",
+       "      <td>40.411404</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>132</td>\n",
+       "      <td>1018</td>\n",
+       "      <td>Paseo de la Florida</td>\n",
+       "      <td>-3.722498</td>\n",
+       "      <td>40.422081</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>43</td>\n",
+       "      <td>968</td>\n",
+       "      <td>Plaza de la Cebada</td>\n",
+       "      <td>-3.708834</td>\n",
+       "      <td>40.411274</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>13</td>\n",
+       "      <td>968</td>\n",
+       "      <td>San Hermenegildo</td>\n",
+       "      <td>-3.706193</td>\n",
+       "      <td>40.428425</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>57</td>\n",
+       "      <td>942</td>\n",
+       "      <td>Plaza de Lavapiés</td>\n",
+       "      <td>-3.700880</td>\n",
+       "      <td>40.408928</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>135</td>\n",
+       "      <td>942</td>\n",
+       "      <td>Entrada Matadero</td>\n",
+       "      <td>-3.697571</td>\n",
+       "      <td>40.392882</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   est  n_recs                            name  longitude   latitude  track  \\\n",
+       "0    9    1391                 Alonso Martínez  -3.695440  40.427868      0   \n",
+       "0  149    1391  Glorieta de los Cuatro Caminos  -3.703667  40.446367      0   \n",
+       "1  175    1274                      Segovia 45  -3.717487  40.413736      1   \n",
+       "1   43    1274              Plaza de la Cebada  -3.708834  40.411274      1   \n",
+       "2   43    1204              Plaza de la Cebada  -3.708834  40.411274      2   \n",
+       "2  220    1204              Marqués de Vadillo  -3.716591  40.398247      2   \n",
+       "3  220    1106              Marqués de Vadillo  -3.716591  40.398247      3   \n",
+       "3   43    1106              Plaza de la Cebada  -3.708834  40.411274      3   \n",
+       "4  135    1039                Entrada Matadero  -3.697571  40.392882      4   \n",
+       "4   49    1039                Puerta de Toledo  -3.711051  40.407036      4   \n",
+       "5   42    1018             Plaza de los Carros  -3.712073  40.411404      5   \n",
+       "5  132    1018             Paseo de la Florida  -3.722498  40.422081      5   \n",
+       "6   43     968              Plaza de la Cebada  -3.708834  40.411274      6   \n",
+       "6   13     968                San Hermenegildo  -3.706193  40.428425      6   \n",
+       "7   57     942               Plaza de Lavapiés  -3.700880  40.408928      7   \n",
+       "7  135     942                Entrada Matadero  -3.697571  40.392882      7   \n",
+       "\n",
+       "   pos  \n",
+       "0    1  \n",
+       "0    2  \n",
+       "1    1  \n",
+       "1    2  \n",
+       "2    1  \n",
+       "2    2  \n",
+       "3    1  \n",
+       "3    2  \n",
+       "4    1  \n",
+       "4    2  \n",
+       "5    1  \n",
+       "5    2  \n",
+       "6    1  \n",
+       "6    2  \n",
+       "7    1  \n",
+       "7    2  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flows2.head(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34e1042a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "id": "22d0bf89",
    "metadata": {},
    "outputs": [],
    "source": [
-    "flows1.to_csv(r'..\\data\\flows.csv', index=False)"
+    "flows2.to_csv(r'..\\data\\flows2.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc6475d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
